small fixes for the off screen menu

--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ input[type="text"] {
   color: #f6f6f6;
   font-size: 2.8rem;
   font-family: "Josefin Sans", sans-serif;
+  padding-bottom: 1rem;
   display: block;
   list-style-type: none;
   line-height: 0.8;
